[gd_scene load_steps=2 format=2]

[ext_resource path="res://test/Generator.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 162.286
margin_top = 157.409
margin_right = 200.286
margin_bottom = 171.409
text = "Size X"

[node name="Label2" type="Label" parent="."]
margin_left = 122.691
margin_top = 269.585
margin_right = 200.691
margin_bottom = 283.585
text = "Room Count"

[node name="Label3" type="Label" parent="."]
margin_left = 162.286
margin_top = 214.273
margin_right = 200.286
margin_bottom = 228.273
text = "Size Y"

[node name="SizeXEdit" type="TextEdit" parent="."]
margin_left = 222.0
margin_top = 141.0
margin_right = 730.0
margin_bottom = 181.0
text = "7"

[node name="SizeYEdit" type="TextEdit" parent="."]
margin_left = 220.834
margin_top = 196.985
margin_right = 728.834
margin_bottom = 236.985
text = "7"

[node name="RoomCountEdit" type="TextEdit" parent="."]
margin_left = 218.501
margin_top = 251.803
margin_right = 726.501
margin_bottom = 291.803
text = "15"

[node name="Button" type="Button" parent="."]
margin_left = 331.258
margin_top = 336.073
margin_right = 602.258
margin_bottom = 356.073
text = "Generate"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 251.0
margin_top = 386.0
margin_right = 686.0
margin_bottom = 572.0

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
